--- a/sanas-finanzas/index.html
+++ b/sanas-finanzas/index.html
@@ -18,6 +18,7 @@
 <body>
   <!-- Contenedor de Login. Inicialmente visible -->
   <div class="contenedor visible" id="login-container">
+    <div class="version-info">Version 2.0.2</div> <!-- <-- VERSIÓN -->
     <h1>Sanas Finanzas</h1>
     <input type="email" id="email" placeholder="Correo electrónico" />
     <input type="password" id="password" placeholder="Contraseña" />
@@ -30,6 +31,7 @@
 
   <!-- Contenedor Principal de la Aplicación. Inicialmente oculto -->
   <div class="contenedor oculto" id="app-container">
+    <div class="version-info">Version 2.0.2</div> <!-- <-- VERSIÓN -->
     <div class="header-app">
       <h1 style="margin: 0;">Tu Balance</h1>
       <button onclick="logout()">Cerrar sesión</button>
